# advent-of-code-sql

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
advent_of_code/: __main__.py  constants.py
advent_of_code/meta/: aoc_website.py  daily_files.py
advent_of_code/meta/template/: part.sql
advent_of_code/solutions/: solutions.schema.json  solutions.yaml
advent_of_code/solutions/year_2024/day_06/: part-2.sql
advent_of_code/solutions/year_2024/day_06/routes/: viewer.py
advent_of_code/solutions/year_2024/day_12/: main.py  part-1.sql
advent_of_code/solutions/year_2024/day_15/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2024/day_16/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2025/: __init__.py
advent_of_code/solutions/year_2025/day_01/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2025/day_02/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2025/day_03/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2025/day_04/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2025/day_05/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2025/day_06/: main.py  part-1.sql  part-2.sql  sample.data
advent_of_code/solutions/year_2025/day_07/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2025/day_08/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2025/day_09/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2025/day_10/: main.py  part-1.sql
advent_of_code/solutions/year_2025/day_11/: main.py  part-1.sql  part-2.sql
advent_of_code/solutions/year_2025/day_12/: main.py  part-1.sql
tests/meta/fixtures/: mock_part.sql
tests/solutions/: test__solutions.py
