# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code-sql"
version = "0.0.0"
description = "SQL solutions to the Advent of Code problem sets."
authors = [{name = "billwallis"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arguably>=1.0.0",
    "duckdb>=1.4.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "requests>=2.0.0",
]

[project.scripts]
aoc = "advent_of_code.__main__:arguably.run"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyyaml>=6.0.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]


[tool.setuptools]
packages = ["advent_of_code"]


[tool.uv]
required-version = ">=0.7,<1.0"
default-groups = "all"


[tool.pytest.ini_options]
addopts = "--cov=advent_of_code"
testpaths = ["tests"]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["F", "I", "N", "PL", "R", "RUF", "S", "UP", "W"]
ignore = []
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"**/*.py" = [
    "N807",  # Function name should not start and end with `__`

    # TODO: Enable these rules
    "S101",     #  Use of `assert` detected
    "F401",     #  `...` imported but unused; consider removing, adding to `__all__`, or using a redundant alias
    "F841",     #  Local variable `...` is assigned to but never used
    "RUF012",   #  Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF015",   #  Prefer `next(...)` over single element slice
    "PLW0603",  #  Using the global statement to update `...` is discouraged
    "PLW1641",  #  Object does not implement `__hash__` method
]
"tests/**/*.py" = [
    "S101",     #  Use of `assert` detected
    "PLR2004",  #  Magic value used in comparison
    "PLR0913",  #  Too many arguments in function definition
]
