# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code-sql"
version = "0.0.0"
description = "SQL solutions to the Advent of Code problem sets."
authors = [{name = "billwallis"}]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "arguably>=1.0.0",
    "duckdb>=1.4.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.2.2",
    "requests>=2.0.0",
]

[project.scripts]
aoc = "advent_of_code.__main__:arguably.run"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyyaml>=6.0.0",
]
test = [
    "coverage>=7.13.5",
    "covdefaults>=2.3.0",
    "pytest>=9.0.3",
]


[tool.setuptools]
packages = ["advent_of_code"]


[tool.uv]
default-groups = "all"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage]
run.plugins = ["covdefaults"]  # https://youtu.be/70T6OxKwxm0
report.fail_under = 80
report.exclude_lines = [
    "@pytest.mark.skip",
    "@pytest.mark.xfail",
]


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "E",     # pycodestyle-error
    "F",     # Pyflakes
    "FURB",  # refurb
    "I",     # isort
    "N",     # pep8-naming
    "PL",    # Pylint
    "PERF",  # Perflint
    "RUF",   # Ruff-specific
    "S",     # flake8-bandit
    "UP",    # pyupgrade
    "W",     # pycodestyle-warning
]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "E501",    # Line too long
]
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.extend-per-file-ignores]
"**/*.py" = [
    "N807",  # Function name should not start and end with `__`

    # TODO: Enable these rules
    "S101",     #  Use of `assert` detected
    "F401",     #  `...` imported but unused; consider removing, adding to `__all__`, or using a redundant alias
    "F841",     #  Local variable `...` is assigned to but never used
    "RUF012",   #  Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF015",   #  Prefer `next(...)` over single element slice
    "PLW0603",  #  Using the global statement to update `...` is discouraged
    "PLW1641",  #  Object does not implement `__hash__` method
]
"tests/**/*.py" = [
    "ANN001",   # Missing type annotation for function argument
    "ANN201",   # Missing return type annotation for public function
    "S101",     # Use of `assert` detected
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Too many arguments in function definition
]
